force-app/main/default/objects/PDF_Field_Mapping__c/PDF_Field_Mapping__c.object-meta.xml
<CustomObject>
    <description>Maps AcroForm PDF field names to Salesforce field API paths for a PDF template.</description>
    <label>PDF Field Mapping</label>
    <nameField>
        <displayFormat>MAP-{00000}</displayFormat>
        <label>Mapping Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PDF Field Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>