force-app/main/default/objects/PDF_Field_Mapping__c/fields/PDF_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>PDF_Field_Name__c</fullName>
    <description>AcroForm text field name/ID discovered in the uploaded PDF.</description>
    <label>PDF Field Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>