force-app/main/default/objects/PDF_Field_Mapping__c/fields/PDF_Template__c.field-meta.xml
<CustomField>
    <fullName>PDF_Template__c</fullName>
    <description>Parent PDF template for this field mapping.</description>
    <label>PDF Template</label>
    <referenceTo>PDF_Template__c</referenceTo>
    <relationshipLabel>PDF Field Mappings</relationshipLabel>
    <relationshipName>PDF_Field_Mappings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>