force-app/main/default/objects/PDF_Field_Mapping__c/fields/Salesforce_Field_Path__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Field_Path__c</fullName>
    <description>Salesforce field API path relative to the template object (e.g. Name, Account.Name, BillingCity).</description>
    <label>Salesforce Field Path</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>